--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -47,10 +47,7 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.nav-item {
-  margin-left: 5rem;
+  gap: 2rem;
 }
 
 .nav-link {
@@ -75,6 +72,8 @@ a {
     left: -100%;
     top: 0;
     flex-direction: column;
+    justify-content: center;
+    gap: 3rem;
 
     background-color: $brand-primary;
     height: 100vh;
@@ -86,10 +85,6 @@ a {
 
   .nav-menu.active {
     left: 0;
-  }
-
-  .nav-item {
-    margin: 2.5rem 0;
   }
 
   .hamburger {
